Fix link z-index

--- a/front/src/components/shared/Tweet/Tweet.module.scss
+++ b/front/src/components/shared/Tweet/Tweet.module.scss
@@ -70,6 +70,7 @@
 }
 
 .UserLink {
+	position: relative;
 	z-index: 3;
 	text-decoration: none;
 	color: var(--main);
